Fix functional Tests